[package]
name = "cart-pole"
version = "0.1.0"
authors = ["Stjepan Golemac <stjepan@tray.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neat-core = { path = "../../core" }
neat-environment-cart-pole = { path = "../../environments/cart-pole" }
neat-export = { path = "../../export" }
nannou = "0.15.0"
